#pragma once

#include <string>
#include <map>

struct SchedulerNode
{
  std::string connstr;
  bool free;
};